# forth

./: .gitignore  Cargo.toml  README.md  compare.py  fizzbuzz.forth  optimized.cpp  test.forth
src/: main.rs  output_cplusplus.rs  output_test.rs  parsing.rs
test_files/: benchmark.forth  blink.forth  fib.forth  fizzbuzz2.forth  fizzbuzz3.forth
