#cargo-features = ["profile-rustflags"]

[package]
name = "forth"
version = "0.1.0"
edition = "2021"

[profile.optrelease]
inherits = 'release'
panic = 'abort'
lto = 'fat'
codegen-units = 1
debug = "line-tables-only"
#rustflags = ["-Ctarget-cpu=native"]
#strip = 'symbols'

[dependencies]
ahash = "0.8.11"
coz = "0.1.3"
itoap = "1.0.1"
